--- a/new.html
+++ b/new.html
@@ -8,10 +8,28 @@
       since a very young age and i have also entered pool tournaments and came out victorious. I would say my inspiration growing up was
       my mother as she taught and showed me that "in life nothing is impossible as even impossible has the word possible in". My favourite nothing
       to eat would probably be a sausage roll just because i love the outer crust and the sausage itself.
+      <h2>Best places i have been</h2>
+      <ul>
+        <li>germany</li>
+        <li>italy</li>
+        <li>spain</li>
+        <li>brazil</li>
+      </ul>
+
+      <img src="images01/picturereza.JPG" alt="REZA"/>
+      <a href="www.gimmesomeoven.com.html">how to make the best pasta</a>
+
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width" initial-scale=1.0 />
     <title></title>
   </head>
   <body>
+    <audio controls>
+      <source src="aud/reza3.wav" type="audio/wav"/>
+    </audio>
+    <video controls="true">
+      <source src="vid02/veryimportantvideo.MP4" type="video/mp4" />
+    </video>
 
   </body>
 </html>
