--- a/new.html
+++ b/new.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <!-- ***
+         The <head> section is for information about the page. The <body> element should contain everything you want to display on the page. You've got lots
+         here in the <head> that should be in the <body>
+         *** -->
     <h1>ALL ABOUT REZA</h1>
     <p>My name is Reza i am 19 years of age and i study at de montfort university. My hobbies consists of playing football, cricket and going to the gym. i love to stay fit and healthy and to maintain this
       i go for a jog every morning at 7am. I play for a cricket club and a football club which really shows the passion i have
