--- a/new.html
+++ b/new.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <!-- ***
-         The <head> section is for information about the page. The <body> element should contain everything you want to display on the page. You've got lots
-         here in the <head> that should be in the <body>
-         *** -->
     <h1>ALL ABOUT REZA</h1>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width" initial-scale=1.0 />
+    <title></title>
+    <link href="css/style.css" rel="stylesheet" type="text/css"/>
+    <style>
+    img {
+      margin: 10px;
+    }
+    </style>
+
+  </head>
+  <body>
+    <h2> Introduction</h2>
     <p>My name is Reza i am 19 years of age and i study at de montfort university. My hobbies consists of playing football, cricket and going to the gym. i love to stay fit and healthy and to maintain this
       i go for a jog every morning at 7am. I play for a cricket club and a football club which really shows the passion i have
       for the sports. Now, going on to my favourite thing to do in my free time is to play pool as i have had a passion for pool
       since a very young age and i have also entered pool tournaments and came out victorious. I would say my inspiration growing up was
-      my mother as she taught and showed me that "in life nothing is impossible as even impossible has the word possible in". My favourite nothing
+      my mother as she taught and showed me that "in life nothing is impossible as even impossible has the word possible in". My favourite thing
       to eat would probably be a sausage roll just because i love the outer crust and the sausage itself.
       <h2>Best places i have been</h2>
       <ul>
@@ -20,20 +30,29 @@
         <li>brazil</li>
       </ul>
 
-      <img src="images01/picturereza.JPG" alt="REZA"/>
-      <a href="www.gimmesomeoven.com.html">how to make the best pasta</a>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width" initial-scale=1.0 />
-    <title></title>
-  </head>
-  <body>
+      <img src="images01/picturereza.JPG" alt="REZA" width="280"/>
+      <p> This image here was taken by my friend, i thought it was cool to show the texture of my tracksuit as the colour really
+      stands out and looks good on the eye.
+    </p>
+      <div>
+      <a href="https://www.gimmesomeoven.com.html">Click here for my favourite pasta recipe</a>
+    </div>
+    <section>
     <audio controls>
       <source src="aud/reza3.wav" type="audio/wav"/>
+      <p>
+        sorry, your browser does not support the audio element. However you can download an MP3 <a href="aud/reza3.mp3">here</a>
+      </p>
     </audio>
+    <p>This is a audiopiece i had recorded in my audio and capture lesson with Mr Wykes</p>
+  </section>
     <video controls="true">
-      <source src="vid02/veryimportantvideo.MP4" type="video/mp4" />
+      <source src="vid02/veryimportantvideo.MP4" type="video/mp4"/>
+      <p>
+        Sorry, your browser does not support the video element. You can download the video <a href="vid02/veryimportantvideo.MP4">here</a>
+      </p>
     </video>
+    <p> Me on my way to my sunday league football game against Loughborough high</p>
 
   </body>
 </html>
