--- a/coursework/index.html
+++ b/coursework/index.html
@@ -65,8 +65,8 @@
   </div>
   <div>
     <video class="thechild"controls="true" width="100%">
-      <source src="vid/Trailer.mp4" type="video/webm" />
-      <source src="vid/Trailer.webm" type="video/mp4" />
+      <source src="vid/Trailer.mp4" type="video/mp4" />
+      <source src="vid/Trailer.webm" type="video/webm" />
     <!--"The 2 different formats required on the criteria"-->
       <p>Sorry, your browser does not support the video element, you can download the video <a href="vid/Trailer.mp4">here</a>.</p>
     <!--"The Fallback for browsers which does not support the video element as required on the criteria"-->
