--- a/maincoursework/contact.html
+++ b/maincoursework/contact.html
@@ -31,6 +31,15 @@
       margin-top: 30px;
     }
 
+    body {
+      min-height: 100vh;
+    }
+
+    footer{
+      position: absolute;
+      bottom: 0;
+    }
+
     @keyframes fallingsquares {
      0% {
        top: 0;
@@ -38,7 +47,7 @@
        opacity: 0.5;
      }
      100% {
-       top: 200vh;
+       top: 100%;
        transform: rotate(720deg);
        opacity: 1.5;
      }
@@ -150,6 +159,7 @@
    <div class="facebook">
      <a href="https://www.facebook.com/BrotherhoodShortFilm/">Facebook Link</a>
    </div>
+   <!--"Links were provided so when pressing word it will direct you to the link"-->
  </section>
 
    <div class="littlesquare" id="ls1"></div>
@@ -165,7 +175,8 @@
    <div class="littlesquare" id="ls11"></div>
    <div class="littlesquare" id="ls12"></div>
    <div class="littlesquare" id="ls13"></div>
-
+<!--"These div classes were used to represent unity as the other two pages have the rotation of the boxes
+in the bakcground so this page should to"-->
   <section>
    <div>
    <img src="img/social.png" alt="Socialmedia"/>
